--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -957,7 +957,7 @@
                         <div class="row phaseInfoHeader">
                             <div class="col-lg-8"></div>
                             <div class="col-lg-2">
-                                <a class="aPackagePDF">Package PDF</a>
+                                <a class="aPackagePDF" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseName={{phase.PhaseName}}" target="_blank">Package PDF</a>
                             </div>
                             <div class="col-lg-2">
                                 <span class="sPackageDoubling">Doubling Days ({{phase.DoublingDays}})</span>
